--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "5.14.0",
+    "bcryptjs": "^2.4.3",
     "next": "14.2.3",
     "pnpm": "^9.1.1",
     "react": "^18",
@@ -24,6 +25,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "20.12.12",
     "@types/react": "^18",
     "@types/react-dom": "^18",
